--- a/app/src/main/res/layout/today_calories_item.xml
+++ b/app/src/main/res/layout/today_calories_item.xml
@@ -13,7 +13,7 @@
         android:background="#BF2758">
 
         <TextView
-            android:id="@+id/tv_title"
+            android:id="@+id/tv_calories"
             style="@style/Theme.NutriCatch.TextStyle.Headline.Medium"
             android:layout_height="52dp"
             android:layout_width="150dp"
@@ -30,15 +30,24 @@
 
 
         <TextView
-            android:id="@+id/tv_calories"
+            android:id="@+id/tv_title"
             style="@style/Theme.NutriCatch.TextStyle.Headline.Medium"
             android:layout_marginEnd="20dp"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/tv_title"
+            app:layout_constraintStart_toEndOf="@+id/tv_calories"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Food Title"
             android:textSize="18dp"/>
+
+        <TextView
+            android:id="@+id/tv_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
