--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -107,6 +107,9 @@
         <action
             android:id="@+id/action_bodyDetailFragment_to_loginFragment2"
             app:destination="@id/loginFragment" />
+        <action
+            android:id="@+id/action_bodyDetailFragment_to_nutritionTargeFragment"
+            app:destination="@id/nutritionTargeFragment" />
     </fragment>
     <fragment
         android:id="@+id/languageFragment"
@@ -219,4 +222,9 @@
         android:name="com.nutricatch.dev.views.navigation.daily_calories.DatePickerFragment"
         android:label="fragment_date_picker"
         tools:layout="@layout/fragment_date_picker" />
+    <fragment
+        android:id="@+id/nutritionTargeFragment"
+        android:name="com.nutricatch.dev.views.navigation.profile.NutritionTargetFragment"
+        android:label="fragment_nutrition_targe"
+        tools:layout="@layout/fragment_nutrition_target" />
 </navigation>
