added nutrient progress

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -39,9 +39,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_16"
+                android:text="Hello, "
                 android:textSize="21sp"
                 android:textStyle="bold"
-                android:text="Hello, "
                 app:layout_constraintBottom_toTopOf="@+id/tv_greeting"
                 app:layout_constraintStart_toEndOf="@id/ic_user"
                 app:layout_constraintTop_toTopOf="@id/ic_user"
@@ -105,13 +105,211 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_v_track_journey" />
 
-        <com.github.aachartmodel.aainfographics.aachartcreator.AAChartView
+        <!--        <com.github.aachartmodel.aainfographics.aachartcreator.AAChartView-->
+        <!--            android:id="@+id/chart"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="256dp"-->
+        <!--            android:layout_marginTop="24dp"-->
+        <!--            app:layout_constraintBottom_toTopOf="@id/tv_food_recommendation"-->
+        <!--            app:layout_constraintTop_toBottomOf="@id/tv_v_track_journey_2" />-->
+
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/chart"
             android:layout_width="match_parent"
-            android:layout_height="256dp"
+            android:layout_height="match_parent"
             android:layout_marginTop="24dp"
             app:layout_constraintBottom_toTopOf="@id/tv_food_recommendation"
-            app:layout_constraintTop_toBottomOf="@id/tv_v_track_journey_2" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_v_track_journey_2">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/v_carbs"
+                android:layout_width="0dp"
+                android:layout_height="200dp"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toStartOf="@id/v_fats"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <View
+                    android:id="@+id/v_bg_carbs"
+                    android:layout_width="0dp"
+                    android:layout_height="200dp"
+                    android:background="@drawable/rounded_corner_shape_16"
+                    android:backgroundTint="#CA82E3"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <View
+                    android:id="@+id/v_fg_carbs"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:background="@drawable/rounded_corner_shape_16_bottom"
+                    android:backgroundTint="#A62ED0"
+                    app:layout_constraintBottom_toBottomOf="@id/v_bg_carbs"
+                    app:layout_constraintEnd_toEndOf="@id/v_bg_carbs"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+                <TextView
+                    android:id="@+id/tv_carbs_percents"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:text="50%" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <TextView
+                android:id="@+id/tv_v_carbs"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Carbs"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="@id/v_carbs"
+                app:layout_constraintTop_toBottomOf="@id/v_carbs" />
+
+            <TextView
+                android:id="@+id/tv_carb_value"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="@id/tv_v_carbs"
+                app:layout_constraintTop_toBottomOf="@id/tv_v_carbs"
+                tools:text="25gr" />
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/v_fats"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:layout_marginEnd="4dp"
+                app:layout_constraintEnd_toStartOf="@id/v_proteins"
+                app:layout_constraintStart_toEndOf="@id/v_carbs"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <View
+                    android:id="@+id/v_bg_fats"
+                    android:layout_width="0dp"
+                    android:layout_height="200dp"
+                    android:background="@drawable/rounded_corner_shape_16"
+                    android:backgroundTint="#fbcc87"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <View
+                    android:id="@+id/v_fg_fats"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:background="@drawable/rounded_corner_shape_16_bottom"
+                    android:backgroundTint="#F9AA02"
+                    app:layout_constraintBottom_toBottomOf="@id/v_fats"
+                    app:layout_constraintEnd_toEndOf="@id/v_fats"
+                    app:layout_constraintStart_toStartOf="@id/v_fats" />
+
+                <TextView
+                    android:id="@+id/tv_fat_percents"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:text="50%" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <TextView
+                android:id="@+id/tv_v_fats"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Fats"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="@id/v_fats"
+                app:layout_constraintTop_toBottomOf="@id/v_fats" />
+
+            <TextView
+                android:id="@+id/tv_fat_value"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="@id/tv_v_fats"
+                app:layout_constraintTop_toBottomOf="@id/tv_v_fats"
+                tools:text="25gr" />
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/v_proteins"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/v_fats"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <View
+                    android:id="@+id/v_bg_proteins"
+                    android:layout_width="0dp"
+                    android:layout_height="200dp"
+                    android:background="@drawable/rounded_corner_shape_16"
+                    android:backgroundTint="#FBA0A0"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <View
+                    android:id="@+id/v_fg_proteins"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:background="@drawable/rounded_corner_shape_16_bottom"
+                    android:backgroundTint="#F96161"
+                    app:layout_constraintBottom_toBottomOf="@id/v_bg_proteins"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="@id/v_bg_proteins" />
+
+                <TextView
+                    android:id="@+id/tv_protein_percents"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:text="50%" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <TextView
+                android:id="@+id/tv_v_proteins"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Proteins"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="@id/v_proteins"
+                app:layout_constraintTop_toBottomOf="@id/v_proteins" />
+
+            <TextView
+                android:id="@+id/tv_proteins_value"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="@id/tv_v_proteins"
+                app:layout_constraintTop_toBottomOf="@id/tv_v_proteins"
+                tools:text="25gr" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
             android:id="@+id/tv_food_recommendation"
